--- a/Plnatsub/app/src/main/AndroidManifest.xml
+++ b/Plnatsub/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.plnatsub">
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="8" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
